Get the job definition file path from the command line